# miniCRT

./: .gitignore  CMakeLists.txt  EASTL.lib  README.md  miniCRT.sln
Project_templates/mini_dll/: MyTemplate.vstemplate  main.cpp  mini_dll.vcxproj  mini_dll.vcxproj.filters  mini_exe1.vcxproj
Project_templates/mini_dll/INCLUDE/: mini.h
Project_templates/mini_exe/: MyTemplate.vstemplate  main.cpp  mini_exe.vcxproj
Project_templates/mini_lib/: MyTemplate.vstemplate  main.cpp  mini_exe1.vcxproj  mini_lib.vcxproj  mini_lib.vcxproj.filters
Project_templates/mini_lib_dll/: DllMain.cpp  MyTemplate.vstemplate  main.cpp  mini_lib.vcxproj  mini_lib.vcxproj.filters
Project_templates/mini_lib_dll/INCLUDE/: mini.h
miniCRT/: atexit.cpp  bigdiv.c  bigdvrm.c  bigmul.c  bigrem.c  bigshift.c  file_io.cpp  ftol3.c  malloc.cpp  mem.cpp  miniCRT.vcxproj  miniCRT.vcxproj.filters  new_delete.cpp  printf.cpp  printf.inl  printfc.cpp  printfw.cpp  stl.cpp  string.cpp  thread_local_storage.cpp
miniCRT/include/: minicrt.h
miniCRT_tests/: fwprintf_test.txt  miniCRT_tests.cpp  miniCRT_tests.vcxproj  miniCRT_tests.vcxproj.filters  test_alloc.h  test_append.txt  test_file_io.h  test_mem.h  test_printf.h  test_string.h  test_write.txt
miniCRT_tests/RelDebug/: vc143.idb
